<resources>
    <string name="app_name">Homework_4</string>
    <string name="action_settings">Settings</string>
    <string name="francisco_watson">Francisco Watson</string>
    <string name="some_number">31</string>
    <string name="sendGift">send a gift</string>
    <string name="feed_txt">feed</string>
    <string name="scan">scanner</string>
    <string name="gift">gifts</string>
    <string name="profile">profile</string>
    <string name="today_10_52_pm">time</string>
    <string name="lorem_ipsum_dolor_sit_amet">There are many variations of passages of Lorem Ipsum available,
        but the majority have suffered alteration in some form, by injected humour, or randomised words which
        look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there is not
        anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet
        tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.
        It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures,
        to generate Lorem Ipsum which looks reasonable.
        The generated Lorem Ipsum is therefore always free from repetition
        , injected humour, or non-characteristic words etc.
    There are many variations of passages of Lorem Ipsum available,
        but the majority have suffered alteration in some form, by injected humour, or randomised words which
        look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there is not
        anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet
        tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.
        It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures,
        to generate Lorem Ipsum which looks reasonable.
        The generated Lorem Ipsum is therefore always free from repetition
        , injected humour, or non-characteristic words etc.
    There are many variations of passages of Lorem Ipsum available,
        but the majority have suffered alteration in some form, by injected humour, or randomised words which
        look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there is not
        anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet
        tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.
        It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures,
        to generate Lorem Ipsum which looks reasonable.
        The generated Lorem Ipsum is therefore always free from repetition
        , injected humour, or non-characteristic words etc.</string>
</resources>
